--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,15 @@
+server:
+  port: 8000
 
+#데이터베이스 설정
+spring:
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://web-study.csbruw3zvnas.ap-northeast-2.rds.amazonaws.com:3306/kiosk
+    username: HDH
+    password: 1q2w3e4r!
+
+#마이바티스 설정
+mybatis:
+  mapper-locations:    #resources폴더를 기본 경로로 잡음. mapper 경로 세팅
+    - /mappers/*.xml
