--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
   port: 8000
 
-#데이터베이스 설정
 spring:
   mvc:
-    static-path-pattern: /static/**
+    static-path-pattern: /static/**   #static 경로 설정
+  #데이터베이스 설정
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://web-study.csbruw3zvnas.ap-northeast-2.rds.amazonaws.com:3306/kiosk
